# XPolicyLab

./: README.md  debug_env_client.py  model_template.py  pyproject.toml  setup_policy_server.py
client_server/: __init__.py
client_server/tcp/: model_client.py
client_server/ws/: model_client.py  model_server.py  test_model_client.py
policy/A1/: README.md  deploy.yml  eval.sh  model.py  process_data.py  process_data.sh  setup_eval_env_client.sh  setup_eval_policy_server.sh  train.sh
policy/ACT/: README.md  deploy.yml  eval.sh  imitate_episodes.py  model.py  process_data.sh  setup_eval_env_client.sh  setup_eval_policy_server.sh  train.sh
policy/AHA_WAM/: README.md  debug_env_client.py  deploy.yml  eval.sh  model.py  setup_eval_env_client.sh  setup_eval_policy_server.sh  train.sh
policy/Abot_M0/: INSTALLATION.md  README.md  deploy.yml  eval.sh  model.py  setup_eval_env_client.sh  setup_eval_policy_server.sh
policy/Being_H05/: README.md  deploy.yml  eval.sh  model.py  process_data.sh  setup_eval_env_client.sh  setup_eval_policy_server.sh  train.sh
policy/DP/: README.md  deploy.yml  eval.sh  model.py  process_data.sh  setup_eval_policy_server.sh  train.sh
policy/Dexbotic_DM0/: INSTALLATION.md  README.md  deploy.yml  eval.sh  model.py  process_data.sh  setup_eval_env_client.sh  setup_eval_policy_server.sh  train.sh
policy/Dexora_1B/: deploy.yml  eval.sh  setup_eval_env_client.sh  setup_eval_policy_server.sh
policy/DreamZero/: deploy.yml  eval.sh  model.py  process_data.py  process_data.sh  setup_eval_env_client.sh  setup_eval_policy_server.sh  train.sh
policy/EventVLA/: README.md  deploy.yml  eval.sh  process_data.sh  setup_eval_env_client.sh  setup_eval_policy_server.sh  train.sh
policy/FastWAM/: INSTALLATION.md  README.md  TRAINING.md  deploy.yml  eval.sh  process_data.sh  process_data_batch.sh  setup_eval_policy_server.sh  train.sh
policy/GO1/: README.md  deploy.yml  model.py  process_data.py  process_data.sh  setup_eval_policy_server.sh  train.sh
policy/GR00T_N17/: INSTALLATION.md  README.md  deploy.yml  eval.sh  model.py  process_data.sh  setup_eval_policy_server.sh  train.sh
policy/GalaxeaVLA/: INSTALLATION.md  README.md  deploy.yml  eval.sh  process_data.sh  process_data_batch.sh  setup_eval_env_client.sh  setup_eval_policy_server.sh  train.sh
policy/GigaWorldPolicy/: INSTALLATION.md  README.md  deploy.yml  eval.sh  model.py  process_data.sh  setup_eval_env_client.sh  setup_eval_policy_server.sh  train.sh
policy/H_RDT/: README.md  deploy.yml  eval.sh  setup_eval_policy_server.sh  train.sh
policy/Hy_Embodied_05_VLA/: README.md  __init__.py  deploy.py  deploy.yml  eval.sh  install.sh  model.py  process_data.sh  setup_eval_env_client.sh  setup_eval_policy_server.sh  train.sh
policy/InternVLA_A1/: README.md  deploy.yml  train.sh
policy/LDA_1B/: INSTALLATION.md  README.md  deploy.yml  eval.sh  process_data.sh  process_data_batch.sh  setup_eval_policy_server.sh  train.sh
policy/Pi_05_SF/open_sf/: README.md  pyproject.toml  pyrightconfig.json
policy/Pi_05_SF/open_sf/scripts/: precache_vggt_sf_cache_test.py  run_pi05sf_jax_offcache.sh  run_pi05sf_jax_offcache_strict.sh  train_align.py
policy/Pi_05_SF/open_sf/src/openpi/: transforms.py
policy/Pi_05_SF/open_sf/src/openpi/external_config/: pi05sf_jax_robodojo_v21_offcache.py
policy/Pi_05_SF/open_sf/src/openpi/models/: pi0_align.py  projectors.py
policy/Pi_05_SF/open_sf/src/openpi/models_pytorch/: sf_offline_cache.py
policy/Pi_05_SF/open_sf/src/openpi/policies/: aloha_policy.py  droid_policy.py  libero_policy.py
policy/Pi_05_SF/open_sf/src/openpi/shared/: image_tools.py
policy/Pi_05_SF/open_sf/src/openpi/training/: align_utils.py  align_utils_test.py  data_loader_test.py
policy/Pi_05_SF/open_sf/src/vggt/heads/: utils.py
policy/Pi_05_SF/open_sf/src/vggt/models/: vggt.py
scripts/: transform_lerobot_v21_format.py  transform_lerobot_v30_format.py
tests/: test_policy_preflight_hooks.sh
utils/: bimanual_piper_contract.py  bimanual_yam_contract.py  get_action_dim.sh  load_file.py  process_data.py  robodojo_paths.py  run_debug_env_client.sh  run_real_env_client.sh  run_real_policy_client.sh  run_sim_env_client.sh  setup_env_client.sh  test_eval_contracts.py  test_process_data_profiles.py  test_yam_contracts.py  wait_for_policy_server.sh  yam_molmoact2_frame.py
(+334 files in other folders)
