[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xpolicylab"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "pyyaml>=6",
    "opencv-python-headless>=4.8",
    "h5py>=3.8",
]

[project.optional-dependencies]
ws = [
    "websockets>=13.0",
    "msgpack>=1.0.8",
    "msgpack-numpy>=0.4.8",
    "pydantic>=2.5",
]

[tool.setuptools]
py-modules = ["XPolicyLab"]

[tool.setuptools.packages.find]
where = ["."]
include = ["client_server*", "utils*"]
exclude = ["policy*", "build*", "scripts*", "__pycache__*", "tests*"]
